[package]
name = "socket_basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
native-tls = "0.2.11"
rustls = "0.21.7"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1.11.0", features = ["full"] }
tokio-native-tls = "0.3.1"



 